--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up and Get $2 Now</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://blogger.googleusercontent.com/img/a/AVvXsEgefZHFfjBskPAp_MZDqKZm_VFc4LyHVYRFpzEOskt_65H4DArmTNgs2O0FbAvtbOwWFpJMzri9vs3NK_l5PtytTpRP2GUbvLgvTMHQ4yCBJmm6ePEuWU5XSGnToDcUfozmZ5_69GpVfHHLLhpZBS4cbARzu5A9kZjEdFGVm1GHz7MaQd0y4mRMh2ZSMog=s370" type="image/x-icon">
     <style>
         /* Styles for title */
         h1 {
@@ -31,7 +31,7 @@
 
     <script>
         // Redirect immediately to the desired link
-        window.location.href = "#"; // Replace "https://example.com" with your desired link
+        window.location.href = "https://sephora-usa.blogspot.com/"; // Replace "https://example.com" with your desired link
     </script>
 </body>
 </html>
