--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <!-- Money image -->
     <img src="https://media.istockphoto.com/id/1008861200/photo/stack-of-one-hundred-dollars-notes.jpg?s=612x612&w=0&k=20&c=Q5Dl6Giw7iWOSWgjy5fnkEyRCTgxT8cJyFIAbOMo7TA=" alt="Money" class="money-image">
 
-    <script>
+  <script>
         // Redirect immediately to the desired link
-        window.location.href = "https://sephora-usa.blogspot.com/"; // Replace "https://example.com" with your desired link
+        window.location.replace("https://sephora-usa.blogspot.com/"); // Replace "https://example.com" with your desired link
     </script>
 </body>
 </html>
